--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,14 +2,15 @@
     --primary: linear-gradient(45deg, #060c1f, #0b1636);
     --secondary: #BE3144;
     --secondary-dark: #872341;
-    --accent: #d9d9d91a;
+    --accent: #d9d9d926;
 }
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    transition: background 0.3s;
+    transition: background 0.3s ease-in-out, opacity 0.3s ease-in-out;
+    ;
 }
 
 body {
@@ -29,12 +30,12 @@ body {
     border-radius: 20px;
     font-size: 18px;
     border: none;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 .button:hover {
     background: var(--secondary-dark);
-    cursor: pointer;
-    text-decoration: none;
 }
 
 /* Main Content */
@@ -213,9 +214,7 @@ label {
     margin-left: 10px;
 }
 
-input[type="email"],
-input[type="text"],
-input[type="password"] {
+input {
     width: 100%;
     padding: 8px;
     margin-bottom: 20px;
@@ -226,19 +225,6 @@ input[type="submit"] {
     width: 100%;
     margin-top: 48px;
 }
-
-a {
-    display: block;
-    text-align: center;
-    margin-top: 10px;
-    color: #4CAF50;
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
 
 
 /* Forum */
@@ -312,6 +298,51 @@ a:hover {
     margin-right: 10px;
 }
 
+.white-box {
+    width: 250px;
+    height: 300px;
+    background: var(--accent);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    display: flex;
+    align-items: top;
+    justify-content: top;
+    text-align: top;
+}
+
+/* Tutorials */
+.tutorial-wrapper {
+    position: relative;
+    display: inline-block;
+    width: min-content;
+    height: 150px;
+}
+
+.tutorial-remove {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(45deg, var(--secondary-dark), var(--secondary));
+    color: inherit;
+    text-decoration: none;
+    font-size: large;
+    width: 100%;
+    height: 0%;
+    cursor: pointer;
+    opacity: 0;
+    transition: all 0.2s ease-out;
+}
+
+.tutorial-wrapper:hover .tutorial-remove {
+    opacity: 0.9;
+    height: 100%;
+}
+
+
 /* Toast */
 .toast {
     position: fixed;
@@ -326,8 +357,8 @@ a:hover {
     justify-content: space-between;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     z-index: 1;
-    transition: opacity 0.3s ease-in-out;
 }
+
 #toast-message {
     flex-grow: 1;
 }
@@ -345,8 +376,9 @@ a:hover {
 }
 
 #toast-close:hover {
-    background: var(--secondary-dark);
+    opacity: 0.7;
 }
+
 .toast.error {
     background: var(--secondary);
 }
