--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -197,7 +197,17 @@ header .hover-accent:hover {
     z-index: 1;
 }
 
-.auth-back img {
+.back-btn {
+    display: flex;
+    align-items: center;
+    color: inherit;
+    text-decoration: none;
+    gap: 10px;
+    max-width: max-content;
+}
+
+.auth-back img,
+.back-btn img {
     width: 30px;
 }
 
@@ -214,7 +224,8 @@ label {
     margin-left: 10px;
 }
 
-input {
+input,
+textarea {
     width: 100%;
     padding: 8px;
     margin-bottom: 20px;
@@ -228,43 +239,101 @@ input[type="submit"] {
 
 
 /* Forum */
-.all-tags a {
-    display: inline;
-    padding: 8px 12px;
-    margin: 0 2px;
+.tags {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px 0;
+    column-gap: 4px;
+    row-gap: 10px;
 }
 
-.tag {
+.tags a {
+    padding: 8px 12px;
+    margin: 0 2px;
+    text-decoration: none;
+    color: inherit;
     background: var(--secondary);
     border-radius: 20px;
     padding: 8px 12px;
-    margin: 0 2px;
+    text-transform: capitalize;
+}
+
+.tags a:hover {
+    background: var(--secondary-dark);
 }
 
 .post {
+    display: block;
+    text-decoration: none;
+    color: inherit;
     position: relative;
     background: var(--accent);
     border-radius: 20px;
     --post-padding: 20px;
     padding: var(--post-padding);
     margin: 20px 0;
-    cursor: pointer;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+}
+
+.post:not(.ful-view):hover {
+    opacity: 0.9;
+}
+
+.post .author {
+    font-weight: 600;
 }
 
 .post h2 {
     font-size: 24px;
-    margin-bottom: 10px;
+    margin-block: 10px;
+}
+
+.post h2 a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.post h2 a:hover {
+    text-decoration: underline;
+}
+
+.post:not(.full-view) h2 {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    line-clamp: 1;
+    -webkit-line-clamp: 1;
+    overflow: hidden;
 }
 
 .post img {
     width: 150px;
-    height: auto;
+    height: 100px;
+    object-fit: cover;
     border-radius: 10px;
     margin-top: 10px;
     background: white;
 }
 
-.post .tags {
+.post.full-view img {
+    width: calc(100% - 40px);
+    height: auto;
+    margin: 30px 20px;
+}
+
+.post .description {
+    white-space: pre-wrap;
+}
+
+.post:not(.full-view) .description {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    line-clamp: 3;
+    -webkit-line-clamp: 3;
+    overflow: hidden;
+}
+
+.post:not(.full-view) .tags {
+    margin: 0;
     position: absolute;
     bottom: var(--post-padding);
     right: var(--post-padding);
@@ -274,6 +343,7 @@ input[type="submit"] {
     font-size: 16px;
     margin: 10px 20px;
 }
+
 
 
 /* Notes */
@@ -352,6 +422,43 @@ input[type="submit"] {
     height: 100%;
 }
 
+button.more {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 0;
+    width: 30px;
+    height: 30px;
+}
+
+button.more .menu {
+    display: none;
+    position: absolute;
+    top: 40px;
+    right: 0;
+    z-index: 1;
+    background: var(--primary);
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 1);
+}
+
+button.more .menu li {
+    list-style: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    text-align: left;
+    font-size: small;
+}
+
+button.more .menu li:hover {
+    background: var(--accent);
+}
+
+button.more:focus .menu {
+    display: block;
+}
+
 
 /* Toast */
 .toast {
@@ -404,6 +511,7 @@ input[type="submit"] {
     backdrop-filter: blur(5px);
     justify-content: center;
     align-items: center;
+    z-index: 1000;
 }
 
 .popup form {
