--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -12,6 +12,10 @@
     transition: background 0.3s ease-in-out, opacity 0.3s ease-in-out;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: Arial, sans-serif;
     background: var(--primary);
@@ -26,7 +30,7 @@ body:has(.main-content) {
 
 .button {
     background: var(--secondary);
-    color: white;
+    color: white !important;
     padding: 10px 30px;
     border-radius: 20px;
     font-size: 18px;
@@ -57,6 +61,12 @@ body:has(.main-content) {
     --sidebar-padding: 20px;
     padding: var(--sidebar-padding);
     box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
+}
+
+a,
+a:visited,
+a:active {
+    color: lightskyblue;
 }
 
 /* Sidebar links */
@@ -361,6 +371,13 @@ input[type="submit"] {
     margin: 10px 20px;
 }
 
+.not-found {
+    font-weight: 600;
+    text-align: center;
+    font-size: 24px;
+    padding-top: 24px;
+}
+
 /* Comments */
 .comments {
     margin: 50px 0;
@@ -389,6 +406,7 @@ input[type="submit"] {
     right: 20px;
     font-size: 14px;
 }
+
 .comment .author {
     min-width: 200px;
 }
@@ -424,19 +442,6 @@ input[type="submit"] {
 .lecture_materials-list li div:hover {
     text-decoration: underline;
     cursor: pointer;
-}
-
-.white-box {
-    width: 250px;
-    height: 300px;
-    background: var(--accent);
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
-    display: flex;
-    align-items: top;
-    justify-content: top;
-    text-align: top;
 }
 
 /* Tutorials */
@@ -505,6 +510,40 @@ button.more .menu li:hover {
 
 button.more:focus .menu {
     display: block;
+}
+
+/* Account */
+.profile,
+.activity {
+    padding: 20px 0;
+}
+
+.profile-details {
+    display: flex;
+    width: 600px;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+    border-radius: 20px;
+    margin: 20px auto;
+
+}
+
+.profile-details .label {
+    display: block;
+    font-weight: 600;
+    width: 150px;
+}
+
+.profile-details>div>p {
+    padding: 10px 0;
+    display: flex;
+}
+
+.activity>div {
+    margin: 20px 0;
+    padding: 20px 0;
 }
 
 
@@ -684,12 +723,14 @@ button.more:focus .menu {
     gap: 10px;
     margin: 0 auto;
 }
+
 .dots .dot {
     width: 10px;
     height: 10px;
     background: var(--secondary-dark);
     border-radius: 50%;
 }
+
 .dots .dot.active {
     background: var(--secondary);
 }
